update json data

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "@playwright/test": "^1.41.1",
     "@types/node": "^20.10.7"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0"
   }
 }
